crates/keron-lang/tests/corpus/errors/check/match_non_exhaustive_union.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: non-exhaustive `match` on `Color`: missing `"blue"`
  --> 4:9
  |
4 |   match c {
  |         ^
  = help: add arms for the missing variants, or a wildcard `_` arm
